# MyMindvisionCamera

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: CameraApi.h  CameraApiLoad.h  CameraDefine.h  CameraStatus.h  MyMindvisionCamera.h
lib/: MVCAMSDK_X64.lib
src/: MyMindvisionCamera.cpp
